// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardActions should render correctly 1`] = `
<div>
  <div
    class="rmd-card__actions"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`CardActions should render correctly 2`] = `
<div>
  <div
    class="rmd-card__actions rmd-card__actions--start"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`CardActions should render correctly 3`] = `
<div>
  <div
    class="rmd-card__actions rmd-card__actions--center custom-class-name"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;
